# GallusOS

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Development-Prompt.txt  LICENSE  NOTICE  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: ci.yml
components/gallus_drivers/: CMakeLists.txt
components/gallus_drivers/include/gallus/drivers/: adc.hpp  drivers.hpp  font5x7.hpp  gpio.hpp  i2c_bus.hpp  ssd1306.hpp
components/gallus_drivers/src/: adc.cpp  gpio.cpp  i2c_bus.cpp  ssd1306.cpp
components/gallus_hal/: CMakeLists.txt
components/gallus_hal/include/gallus/hal/: board.hpp
components/gallus_kernel/: CMakeLists.txt
components/gallus_kernel/include/gallus/: error.hpp  event.hpp  event_bus.hpp  kernel.hpp  log.hpp  scheduler.hpp  version.hpp
components/gallus_kernel/src/: error.cpp  event_bus.cpp  kernel.cpp  log.cpp  scheduler.cpp
components/gallus_sdk/: CMakeLists.txt
components/gallus_sdk/include/gallus/sdk/: module.hpp  module_manager.hpp  module_registry.hpp
components/gallus_sdk/src/: module_manager.cpp  module_registry.cpp
components/gallus_services/: CMakeLists.txt  idf_component.yml
components/gallus_services/include/gallus/services/: battery_service.hpp  ble_service.hpp  config_service.hpp  diagnostics_service.hpp  display_service.hpp  gpio_service.hpp  i2c_service.hpp  ieee802154_service.hpp  network_service.hpp  ota_service.hpp  power_mode_service.hpp  rest_service.hpp  services.hpp  splash_frames.hpp  storage_service.hpp  time_service.hpp  webui_service.hpp  wifi_service.hpp
components/gallus_services/src/: battery_service.cpp  ble_service.cpp  config_service.cpp  diagnostics_service.cpp  display_service.cpp  gpio_service.cpp  i2c_service.cpp  ieee802154_service.cpp  network_service.cpp  ota_service.cpp  power_mode_service.cpp  rest_service.cpp  storage_service.cpp  time_service.cpp  webui_service.cpp  wifi_service.cpp
docs/: MODULES.md  MODULE_API.md
host/: CMakeLists.txt  main.cpp
host/mock/: ble_service.cpp  gpio.cpp  i2c_bus.cpp  i2c_service.cpp  ieee802154_service.cpp  rest_service.cpp  storage_service.cpp  wifi_service.cpp
host/shim/: esp_err.h  esp_http_server.h  esp_log.h  esp_log_shim.cpp  esp_system.h  esp_system_shim.cpp  esp_timer.h  esp_timer_shim.cpp  freertos_shim.cpp
host/shim/driver/: i2c_master.h
host/shim/freertos/: FreeRTOS.h  queue.h  semphr.h  task.h
main/: CMakeLists.txt  api_routes.cpp  api_routes.hpp  main.cpp
modules/ble_scan/: CMakeLists.txt  README.md  config.json  manifest.json  module.cpp
modules/gpio_blink/: README.md  config.json  manifest.json  module.cpp
modules/hello_world/: README.md  config.json  manifest.json  module.cpp
modules/i2c_scanner/: config.json  manifest.json  module.cpp
modules/ieee802154_scan/: README.md  config.json  manifest.json  module.cpp
modules/system_info/: config.json  manifest.json  module.cpp
modules/wifi_scan/: README.md  config.json  manifest.json  module.cpp
tests/host/: run_tests.py  test_manifest_gen.py
tools/: gallus.py  gallus_image_gen.py  gallus_manifest_gen.py  gallus_module.cmake
web/dashboard/: index.html
